commiting basic preenter

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.1"
+    buildToolsVersion "25.0.0"
 
     defaultConfig {
         applicationId "com.arunsoorya.timeline"
@@ -22,8 +22,10 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.google.dagger:dagger:2.0'
+    compile 'com.android.support:appcompat-v7:25.0.0'
+    compile 'com.google.dagger:dagger:2.8'
     //    annotationProcessor 'com.google.dagger:dagger-compiler:2.x'
-    compile 'com.android.support:design:25.0.1'
+    compile 'com.jakewharton:butterknife:8.4.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+    compile 'com.android.support:design:25.0.0'
 }
