--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,25 @@
-# Project-wide Gradle settings.
-
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
-
+## Project-wide Gradle settings.
+#
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
-
+#
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-# Default value: -Xmx10248m -XX:MaxPermSize=256m
+# Default value: -Xmx1024m -XX:MaxPermSize=256m
 # org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-
+#
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+#Thu Dec 15 10:59:01 IST 2016
+systemProp.http.proxyPassword=qatarar*12
+systemProp.http.proxyHost=nandiisa.sonata.local
+systemProp.http.nonProxyHosts=*.sonata-software.com;*.sonata.local
+systemProp.http.proxyUser=arunkumar.sw
+systemProp.http.proxyPort=8080
+systemProp.https.proxyPassword=qatarar*12
+systemProp.https.proxyHost=nandiisa.sonata.local
+systemProp.https.nonProxyHosts=*.sonata-software.com;*.sonata.local
+systemProp.https.proxyUser=arunkumar.sw
+systemProp.https.proxyPort=8080
